--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "rrtg",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "Random Random Text Generator",
   "main": "index.js",
   "files": [
     "bin",
-    "lib",
+    "src",
     "package.json",
     "README.md"
   ],
